<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Nerubia Web Solutions Inc.</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="username">username</string>
    <string name="password">password</string>
	<string name="login">login</string>
	<string name="successful_page">Successful Page</string>
	<string name="logout">logout</string>
	<string name="punch_time">Punch In</string>
	<string name="date">Date</string>
	<string name="time">Time</string>
	<string name="note">Note</string>
	<string name="in">In</string>
	<string name="change_password">change password</string>
	<string name="leave">Leave</string>
	<string name="apply">Apply</string>
	<string name="my_leave">My Leave</string>
	<string name="entitlements">Entitlements</string>
	<string name="reports">Reports</string>
	<string name="my_info">My Info</string>
	<string name="timesheets">Timesheets</string>
	<string name="attendance">Attendance</string>
	<string name="my_records">My Records</string>
	<string name="punch_in_out">Punch In/Out</string>
	<string name="search">Search</string>
	<string name="punch_in">Punch In</string>
	<string name="puch_in_note">Punch In Note</string>
	<string name="punch_out">Punch Out</string>
	<string name="punch_out_note">Punch Out Note</string>
	<string name="duration">Duration</string>
	<string name="total">Total</string>
	<string name="leave_type">Leave Type</string>
	<string name="leave_balance">Leave Balance</string>
	<string name="from_date">From Date</string>
	<string name="to_date">To Date</string>
	<string name="from">From</string>
	<string name="to">To</string>
	<string name="duration_hours">Duration Hours</string>
	<string name="comment">Comment</string>
	<string name="main">Main Menu</string>
</resources>