<?xml version="1.0" encoding="utf-8"?>
<TableRow xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="5dp"
    android:background="@color/gray"
    tools:ignore="SmallSp" >

    <TextView
        android:id="@+id/punchInResult"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="2dp"
        android:layout_weight="32"
        android:gravity="center"
        android:text="@string/punch_in"
        android:textSize="9sp" />

    <TextView
        android:id="@+id/punchOutResult"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="2dp"
        android:layout_weight="32"
        android:gravity="center"
        android:text="@string/punch_out"
        android:textSize="9sp" />

    <TextView
        android:id="@+id/durationResult"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="2dp"
        android:layout_weight="32"
        android:gravity="center"
        android:text="@string/duration"
        android:textSize="9sp" />

</TableRow>