<?xml version="1.0" encoding="utf-8"?>
<TableRow xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="5dp"
    android:background="@color/nerubia_blue"
    tools:ignore="SmallSp" >

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="2dp"
        android:layout_weight="32"
        android:gravity="center"
        android:text="@string/punch_in"
        android:textColor="@color/white"
        android:textSize="9sp" />

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="2dp"
        android:layout_weight="32"
        android:gravity="center"
        android:text="@string/punch_out"
        android:textColor="@color/white"
        android:textSize="9sp" />

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="2dp"
        android:layout_weight="32"
        android:gravity="fill_vertical"
        android:text="@string/duration_hours"
        android:textColor="@color/white"
        android:textSize="9sp" />

</TableRow>