<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    tools:ignore="SmallSp" >

    <TableRow
        android:id="@+id/trFirstHeader"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="2dp"
        android:background="@color/nerubia_blue" >

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:layout_weight="32"
            android:gravity="center"
            android:text="@string/punch_in"
            android:textColor="@color/white"
            android:textSize="9sp" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:layout_weight="32"
            android:gravity="center"
            android:text="@string/punch_out"
            android:textColor="@color/white"
            android:textSize="9sp" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:layout_weight="32"
            android:gravity="fill_vertical"
            android:text="@string/duration"
            android:textColor="@color/white"
            android:textSize="9sp" />
    </TableRow>

    <TableRow
        android:id="@+id/trSecondHeader"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="2dp"
        android:background="@color/nerubia_blue" >

        <TextView
            android:layout_width="0dp"
            android:layout_margin="2dp"
            android:layout_weight="50"
            android:gravity="center"
            android:text="@string/puch_in_note"
            android:textColor="@color/white"
            android:textSize="9sp" />

        <TextView
            android:layout_width="0dp"
            android:layout_margin="2dp"
            android:layout_weight="50"
            android:gravity="center"
            android:text="@string/punch_out_note"
            android:textColor="@color/white"
            android:textSize="9sp" />
    </TableRow>

    <TableRow
        android:id="@+id/trResult"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="2dp"
        android:background="@color/nerubia_gray" >

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:layout_weight="32"
            android:gravity="center"
            android:text="@string/total"
            android:textColor="@color/white"
            android:textSize="9sp" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:layout_weight="32"
            android:gravity="center"
            android:textColor="@color/white"
            android:textSize="9sp" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:layout_weight="32"
            android:gravity="fill_vertical"
            android:text="@string/duration"
            android:textColor="@color/white"
            android:textSize="9sp" />
    </TableRow>

</LinearLayout>