<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    tools:context=".MainActivity" >

    <RelativeLayout
        android:id="@+id/mainHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/logout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:layout_marginRight="10dp"
            android:textSize="12sp"
            android:text="@string/logout" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/mainContent"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="10dp" 
        android:visibility="visible">

        <!-- <TextView -->
        <!-- android:id="@+id/textView1" -->
        <!-- android:layout_centerInParent="true" -->
        <!-- android:layout_width="wrap_content" -->
        <!-- android:layout_height="wrap_content" -->
        <!-- android:text="@string/successful_page" -->
        <!-- android:textAppearance="?android:attr/textAppearanceLarge" /> -->

        <TextView
            android:id="@+id/lblPunchTime"
            android:textSize="12sp"
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginTop="51dp"
            android:text="@string/punch_time" />

        <TextView
            android:id="@+id/txtPunchTime"
            android:textSize="12sp"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/lblPunchTime"
            android:layout_alignBottom="@+id/lblPunchTime"
            android:layout_marginLeft="37dp"
            android:layout_toRightOf="@+id/lblPunchTime"
            android:background="@xml/edittextborder"
            android:textIsSelectable="false" />

        <TextView
            android:id="@+id/lblDate"
            android:textSize="12sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/lblPunchTime"
            android:layout_below="@+id/txtPunchTime"
            android:layout_marginTop="13dp"
            android:text="@string/date" />

        <TextView
            android:id="@+id/txtDate"
            android:textSize="12sp"
            android:layout_width="200dp"
            android:background="@xml/edittextborder"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/lblDate"
            android:layout_alignBottom="@+id/lblDate"
            android:layout_alignLeft="@+id/txtPunchTime"
            android:textIsSelectable="false"/>

        <TextView
            android:id="@+id/lblTime"
            android:textSize="12sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/lblDate"
            android:layout_below="@+id/txtDate"
            android:layout_marginTop="13dp"
            android:text="@string/time" />

        <TextView
            android:id="@+id/txtTime"
            android:textSize="12sp"
            android:background="@xml/edittextborder"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/lblTime"
            android:layout_alignBottom="@+id/lblTime"
            android:layout_alignLeft="@+id/txtDate"
            android:textIsSelectable="false"/>

        <TextView
            android:id="@+id/lblNote"
            android:textSize="12sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/lblTime"
            android:layout_below="@+id/txtTime"
            android:layout_marginTop="13dp"
            android:text="@string/note" />

        <EditText
            android:id="@+id/txtNote"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/txtTime"
            android:layout_alignTop="@+id/lblNote"
            android:background="@xml/edittextborder"
            android:inputType="textMultiLine"
            android:textIsSelectable="false"
            android:gravity="start"
            android:maxLines="5"
            android:lines="5"
            android:textSize="12sp" >

            <requestFocus />
        </EditText>

        <Button
            android:id="@+id/btnTimeIn"
            android:textSize="12sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignRight="@+id/lblPunchTime"
            android:layout_below="@+id/txtNote"
            android:layout_marginTop="10dp"
            android:text="@string/in" />

    </RelativeLayout>

</LinearLayout>